fix(material/progress-bar): incorrect alignment if direction is set on element
Fixes an issue where the progress bar was looking for `dir="rtl"` only on parent elements, but on itself. We can avoid the problem altogether by using a directionality-agnostic property.

Fixes #28572.

--- a/src/material/progress-bar/progress-bar.scss
+++ b/src/material/progress-bar/progress-bar.scss
@@ -16,11 +16,7 @@
   display: block;
 
   // Explicitly set a `text-align` so that the content isn't affected by the parent (see #27613).
-  text-align: left;
-
-  [dir='rtl'] & {
-    text-align: right;
-  }
+  text-align: start;
 
   // Inverts the progress bar horizontally in `query` mode.
   &[mode='query'] {
